revert test changes for query plannign tool
Signed-off-by: Pavan Yekbote <pybot@amazon.com>