@@ -171,20 +171,15 @@ public class QueryPlanningToolTests {
 
     @Test
     public void testValidate() {
-        Tool tool = QueryPlanningTool.Factory.getInstance().create(Map.of("model_id", "test_model_id"));
+        Tool tool = QueryPlanningTool.Factory.getInstance().create(Collections.emptyMap());
         assertTrue(tool.validate(validParams));
         assertFalse(tool.validate(emptyParams));
         assertFalse(tool.validate(null));
     }
 
     @Test
-    public void testToolCreationFailure() {
-        assertThrows(IllegalArgumentException.class, () -> QueryPlanningTool.Factory.getInstance().create(Collections.emptyMap()));
-    }
-
-    @Test
     public void testToolGetters() {
-        Tool tool = QueryPlanningTool.Factory.getInstance().create(Map.of("model_id", "test_model_id"));
+        Tool tool = QueryPlanningTool.Factory.getInstance().create(Collections.emptyMap());
         assertEquals(QueryPlanningTool.TYPE, tool.getName());
         assertEquals(QueryPlanningTool.TYPE, tool.getType());
         assertEquals(DEFAULT_DESCRIPTION, tool.getDescription());
